fix overflow #2

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,9 +66,11 @@ body{
         background-size: cover;
     }
     .announcement{
-        overflow: hidden;
         height: 37px;
         background-color:#dfd1b4;
+        .overflow{
+            overflow: hidden;
+        }
         .rightToLeft{
             animation: RightToLeft 10s infinite linear;
         }
